<resources>
    <string name="Add_tagging">ADD TAGS</string>
    <string name="CLEVER_TAP_ACCOUNT_ID">WRZ-77R-R65Z</string>
    <string name="CLEVER_TAP_TOKEN">2aa-120</string>
    <string name="CT_ACCOUNT_ID">TEST-ZRZ-77R-R65Z</string>
    <string name="CT_TOKEN">TEST-2aa-121</string>
    <string name="PREFS_NAME">Argus_WorkoutPlan_Pref</string>
    <string name="a1c">A1C</string>
    <string name="a1c_title_form">Manual A1C Log</string>
    <string name="a1c_unit">%</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="access_premium_features">Access all Premium\10features</string>
    <string name="action_add">Add</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_change_background">Change background</string>
    <string name="action_confirm">Confirm</string>
    <string name="action_copy">Copy</string>
    <string name="action_delete">DELETE</string>
    <string name="action_done">Done</string>
    <string name="action_forgot_password">Forgot?</string>
    <string name="action_log_in">Log In</string>
    <string name="action_map_type_normal">Map</string>
    <string name="action_map_type_satellite">Satellite</string>
    <string name="action_next">Next</string>
    <string name="action_no">NO</string>
    <string name="action_ok">OK</string>
    <string name="action_remind_me_later">Remind me later</string>
    <string name="action_retry">Retry?</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_sign_in_with_facebook">Facebook</string>
    <string name="action_sign_in_with_google">Google</string>
    <string name="action_sign_out">Logout</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_snooze">Snooze</string>
    <string name="action_unset">Unset</string>
    <string name="action_upgrade">Upgrade</string>
    <string name="action_yes">YES</string>
    <string name="active">Active</string>
    <string name="active_activity">Moderate exercise 3-5 days/week.</string>
    <string name="active_calories">Active</string>
    <string name="active_level">Active\10Moderate exercise 3-5 days/week</string>
    <string name="activity_calories_settings_calories_accuracy_format">Accuracy %s </string>
    <string name="activity_calories_settings_header">We need this data to accurately calculate caloric output.\10Basal calories burned are calculated using The Mifflin St Jeor Equation.</string>
    <string name="activity_definition_header_text_popular_activities">Popular Activities</string>
    <string name="activity_definition_header_text_user_selection">Previously selected activities</string>
    <string name="activity_ihr_info_getstarted_txt">Let\'s Get Started!</string>
    <string name="activity_ihr_info_heartratezone_cardio1_txt"> 147bpm - 158bpm </string>
    <string name="activity_ihr_info_heartratezone_cardio2_txt">70-80% of heart rate reserve</string>
    <string name="activity_ihr_info_heartratezone_cardio3_txt">Also called anaerobic zone. In this you\'ll get the greatest health benefits overall. Your heart and lung capacity will increase and your overall fitness will also increase, so you\'ll be able to exercise longer. Your body will get 50% of your calories from fat, 50% from carbohydrates and protein burn will be minimal.</string>
    <string name="activity_ihr_info_heartratezone_cardio_txt"> Cardio </string>
    <string name="activity_ihr_info_heartratezone_detail_txt">Heart Rate is the number of heart beats per unit of time, typically expressed as beats per minutes (bpm).</string>
    <string name="activity_ihr_info_heartratezone_extreme1_txt"> 158bpm - 168bpm </string>
    <string name="activity_ihr_info_heartratezone_extreme2_txt">80-90% of heart rate reserve</string>
    <string name="activity_ihr_info_heartratezone_extreme3_txt">Also called anaerobic zone. This is highly intense exercise and should be limited to no more than 10-20 minutes. Your body\'s ability to consume oxygen will increase. If you push too hard your body will start producing lactic acid. Your body will burn 85% fats and minimal percentage of protein.</string>
    <string name="activity_ihr_info_heartratezone_extreme_txt"> Extreme </string>
    <string name="activity_ihr_info_heartratezone_fatburn1_txt"> 137bpm - 147bpm </string>
    <string name="activity_sleep_time_info">Info</string>
    <string name="activity_sleep_time_info_howitworks">How It Works</string>
    <string name="activity_sleep_time_info_howitworks_detail">As you sleep, you go through different phases that range from deep sleep to light sleep. The phase you are in when your alarm clock goes off will impact how rested or groggy you feel when you wake. A fixed alarm clock wakes you up no matter what phase you are in your sleep. Many time, it will wake you in the middle of a deep sleep phase (sometimes while having a sweet dream) and you wake up still feeling tired.</string>
    <string name="activity_sleep_time_info_howitworks_detail2">Sleep Time always tries to wake you in your lightest sleep phase. This is the natural way to wake up where you feel rested and rejuvenated. Sleep Time uses the sensitive accelerometer built into your iPhone to monitor your movements and determine your sleep phase.</string>
    <string name="activity_sleep_time_info_placement">Placement</string>
    <string name="activity_sleep_time_info_placement_detail">Sleep Time uses the phone\'s accelerometer to sense your movement as you sleep.</string>
    <string name="activity_sleep_time_info_placement_graph">It is important that you place your phone on the mattress where it will not fall off the bed, or bother you while you sleep. We recommend the top corner of the mattress, out of the way of the pillow.</string>
    <string name="activity_sleep_time_info_sleeplab">Sleep Lab Parameters</string>
    <string name="activity_sleep_time_info_sleeplab_desc">Please refer to the Azumio web site and Wikipedia for more information about sleep in general and how the Sleep Time application works.</string>
    <string name="activity_sleep_time_info_sleeptimegraph">Sleep Time will monitor your movement throughout the night to determine your sleep cycle and wake you softly, when you are in the lightest possible sleep phase.</string>
    <string name="activity_sleep_time_info_sleeptxt">Sleep Time creates a 30 minute wake-up phase that ends at your desired alarm time.</string>
    <string name="activity_sleep_time_info_snooze">Snooze</string>
    <string name="activity_sleep_time_info_snooze_desc">You can snooze the alarm by simply picking up the phone but we recommend you wake up when the alarm goes off.</string>
    <string name="activity_sleep_time_info_soundscape">Soundscapes</string>
    <string name="activity_sleep_time_info_soundscape_desc">Soundscapes can help you fall asleep more easily in a noisy environment, such as in a city or near a highway, or just help you relax after a stressful day.</string>
    <string name="activity_sleep_time_info_soundscape_desc2">From the soundscapes tab, choose a soundscape from our Azumio collection. When you start the alarm, you will notice a musical note icon on the upper left of the alarm screen. This icon lets you start or stop soundscapes directly from the alarm screen. You can also use the soundscapes audio button on the alarm screen in case you need to pause or resume soundscapes after you have started your alarm.</string>
    <string name="activity_sleep_time_info_soundscape_desc3">You may set the soundscapes to play for any duration that you like. When the soundscape is scheduled to turn off, Sleep Time will gradually decrease the volume so that you are not awoken by any sudden changes in ambient sound.</string>
    <string name="activity_sleep_time_info_welcome_txt">Welcome!</string>
    <string name="cancel_anytime">Cancel anytime.</string>
    <string name="claim_my_trail">CLAIM MY %s</string>
    <string name="claim_trial">To claim your %s, please subscribe by tapping the below button.</string>
    <string name="code_redeemed">Code Redeemed!</string>
    <string name="connect_google_fit_to_track_steps">Connect Google Fit to track steps</string>
    <string name="font_path_material_design_set">fonts/MaterialDesignIcons_0_5_18/MaterialDesignIcons.ttf</string>
    <string name="font_path_roboto_light">fonts/Roboto-Light.ttf</string>
    <string name="font_path_roboto_medium">fonts/roboto_medium.ttf</string>
    <string name="font_path_roboto_regular">fonts/roboto_regular.ttf</string>
    <string name="font_path_sans_francisco_medium">fonts/SanFranciscoDisplay-Medium.otf</string>
    <string name="font_path_sans_francisco_regular">fonts/SanFranciscoDisplay-Regular.otf</string>
    <string name="for_new_users">TODAY ONLY FOR NEW USERS!</string>
    <string name="free_trial">1 %s free trial</string>
    <string name="get_all_tools_to_improve">Get all the tools you need to monitor your heart health and achieve your goals!</string>
    <string name="get_my_health_bundle">GET MY HEALTH BUNDLE</string>
    <string name="get_started">Get Started</string>
    <string name="get_your_health_bundle">Get your heart health bundle TODAY!</string>
    <string name="google_fit_is_connected_and_tracking_steps">Google Fit is connected and tracking steps!</string>
    <string name="last_chance">Last Chance!</string>
    <string name="no_billing_until_trial">You will not be billed until your trial is over.</string>
    <string name="no_thanks">NO THANKS, START FOR FREE</string>
    <string name="premium_features">Just $9.99/%s afterwards.\10Includes all Premium Features.</string>
    <string name="privacy_policy">Terms of Service and Privacy Policy</string>
    <string name="ready_to_improve">Ready to improve your heart health?</string>
    <string name="redeemtext">Redeem</string>
    <string name="terms">Payment will be charged to iTunes Account after 1 week trial period. Account will be charged for renewal within 24 hours prior to the end of the next period. Subscription autorenwal may be turned off in the Account settings</string>
    <string name="unlock_one_year_trial">You have unlocked a special %1$s of %2$s Premium.</string>
</resources>