<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:id="@+id/mainLayout" android:tag="layout/premium_trial_popup_0" android:background="#80000000" android:layout_width="match_parent" android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout android:background="@drawable/rounded_fb_white" android:focusable="true" android:focusableInTouchMode="true" android:visibility="visible" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="30dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintTop_toTopOf="0">
        <com.azumio.android.argus.view.XMLTypefaceTextView android:textSize="20sp" android:textColor="#353b5a" android:id="@+id/week_free_trial" android:paddingTop="20dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/free_trial" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:typeface="@string/font_path_roboto_regular"/>
        <com.azumio.android.argus.view.XMLTypefaceTextView android:textSize="17sp" android:textColor="#353b5a" android:id="@+id/all_premium_features" android:paddingTop="20dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/premium_features" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toBottomOf="@+id/week_free_trial" app:typeface="@string/font_path_roboto_regular"/>
        <com.azumio.android.argus.view.XMLTypefaceTextView android:textSize="17sp" android:textColor="#353b5a" android:id="@+id/cancel_anytime" android:paddingTop="20dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cancel_anytime" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toBottomOf="@+id/all_premium_features" app:typeface="@string/font_path_roboto_regular"/>
        <com.azumio.android.argus.view.XMLTypefaceTextView android:textSize="16sp" android:textColor="@color/white" android:gravity="center" android:id="@+id/okButton" android:background="@drawable/rounded_workout_blue" android:layout_width="200dp" android:layout_height="45dp" android:layout_marginTop="20dp" android:text="@string/action_ok" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toBottomOf="@+id/cancel_anytime" app:typeface="@string/font_path_roboto_medium"/>
        <com.azumio.android.argus.view.XMLTypefaceTextView android:textSize="16sp" android:textColor="#8d91a4" android:gravity="center" android:id="@+id/terms" android:paddingLeft="20dp" android:paddingTop="20dp" android:paddingRight="20dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/terms" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toBottomOf="@+id/okButton" app:typeface="@string/font_path_roboto_regular"/>
        <com.azumio.android.argus.view.XMLTypefaceTextView android:textSize="16sp" android:textColor="#8d91a4" android:linksClickable="true" android:id="@+id/termsAndService" android:paddingTop="10dp" android:paddingBottom="20dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/privacy_policy" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toBottomOf="@+id/terms" app:typeface="@string/font_path_roboto_regular"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
