<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="match_parent">
    <ImageView android:id="@+id/closeIcon" android:padding="20dp" android:visibility="visible" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginTop="20dp" android:src="@drawable/abc_ic_clear_material" android:tint="@color/text_color" android:layout_marginStart="20dp"/>
    <com.azumio.android.argus.view.XMLTypefaceTextView android:textSize="33.3dp" android:textColor="@color/text_color" android:gravity="center_horizontal" android:id="@+id/referralCodeText" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="80dp" android:text="@string/code_redeemed" app:layout_constraintStart_toEndOf="@+id/closeIcon" app:layout_constraintTop_toBottomOf="@+id/closeIcon" app:typeface="@string/font_path_sans_francisco_medium"/>
    <com.azumio.android.argus.view.XMLTypefaceTextView android:textSize="20dp" android:textColor="@color/text_color" android:gravity="center_horizontal" android:id="@+id/unlockTrailText" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="25dp" android:layout_marginTop="35dp" android:text="@string/unlock_one_year_trial" app:layout_constraintStart_toEndOf="@+id/referralCodeText" app:layout_constraintTop_toBottomOf="@+id/referralCodeText" app:typeface="@string/font_path_sans_francisco_regular"/>
    <com.azumio.android.argus.view.XMLTypefaceTextView android:textSize="20dp" android:textColor="@color/text_color" android:gravity="center_horizontal" android:id="@+id/claimTrailText" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="25dp" android:layout_marginTop="35dp" android:text="@string/claim_trial" app:layout_constraintTop_toBottomOf="@+id/unlockTrailText" app:typeface="@string/font_path_sans_francisco_regular"/>
    <com.azumio.android.argus.view.XMLTypefaceTextView android:textSize="16.5dp" android:textColor="@color/white" android:gravity="center" android:id="@+id/claimTrail" android:background="@drawable/rounded_drawable" android:layout_width="200dp" android:layout_height="45dp" android:layout_marginTop="30dp" android:text="@string/claim_my_trail" android:textAllCaps="true" android:backgroundTint="#2d388e" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toBottomOf="@+id/claimTrailText" app:typeface="@string/font_path_sans_francisco_medium"/>
    <com.azumio.android.argus.view.XMLTypefaceTextView android:textSize="20dp" android:textColor="@color/text_color" android:gravity="center_horizontal" android:id="@+id/notBilled" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="25dp" android:layout_marginTop="35dp" android:text="@string/no_billing_until_trial" app:layout_constraintTop_toBottomOf="@+id/claimTrail" app:typeface="@string/font_path_sans_francisco_regular"/>
</androidx.constraintlayout.widget.ConstraintLayout>
