<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:id="@+id/main_layout" android:background="@color/orange" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginRight="20dp">
        <TextView android:textSize="21.5sp" android:textColor="@color/white" android:gravity="center" android:id="@+id/title" android:layout_width="match_parent" android:layout_marginLeft="20dp" android:layout_marginTop="@dimen/last_chance_margin_top" android:layout_marginRight="20dp" android:layout_marginBottom="@dimen/last_chance_margin_bottom" android:text="@string/get_your_health_bundle" android:layout_below="@+id/double_text" android:layout_centerHorizontal="true" android:lineSpacingExtra="3dp" style="@style/today_text_design"/>
        <ImageView android:layout_gravity="center" android:id="@+id/image_view" android:layout_width="@dimen/width_height" android:layout_height="@dimen/width_height" android:layout_marginTop="@dimen/marginstop" android:src="@drawable/ihr_last_chance" android:backgroundTint="@color/orange"/>
        <TextView android:textSize="23.5sp" android:textColor="@color/white" android:gravity="center_horizontal" android:id="@+id/header" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margins" android:text="@string/last_chance"/>
        <TextView android:textSize="20sp" android:textColor="@color/white" android:gravity="center_horizontal" android:id="@+id/description1" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margins" android:text="@string/ready_to_improve"/>
        <TextView android:textSize="17.5sp" android:textColor="@color/white" android:gravity="center_horizontal" android:id="@+id/description2" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margins" android:text="@string/get_all_tools_to_improve"/>
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@+id/redeemUser" android:background="@drawable/rounded_blue" android:layout_width="match_parent" android:layout_height="45dp" android:layout_marginLeft="30dp" android:layout_marginTop="30dp" android:layout_marginRight="30dp" android:layout_above="@+id/exittxt">
        <LinearLayout android:layout_gravity="center_horizontal" android:orientation="vertical" android:id="@+id/premiumView" android:visibility="visible" android:layout_width="match_parent" android:layout_height="0dp" android:weightSum="1" android:layout_weight="1">
            <TextView android:textColor="@color/light_grey" android:gravity="center" android:id="@+id/premiumbtntxt" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:text="@string/redeemtext"/>
            <TextView android:textColor="@color/dim_grey" android:gravity="center" android:id="@+id/premiumbtntxt2" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="5dp" android:text="@string/for_new_users"/>
        </LinearLayout>
        <TextView android:textColor="@color/light_grey" android:gravity="center" android:id="@+id/healthBundle" android:visibility="gone" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/get_my_health_bundle"/>
    </LinearLayout>
    <TextView android:textColor="@color/light_orange" android:id="@+id/exittxt" android:paddingBottom="10dp" android:layout_marginTop="15dp" android:text="@string/no_thanks" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" style="@style/text_design_premium"/>
</RelativeLayout>
